Correct timestamp in 'About' display

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,6 @@ src/ReadMe-PyInstaller.md
 src/birdland/Package_Type_Setuptools.txt
 src/birdland/ReadMe-Setuptools.md
 src/birdland/.rgignore
+
+src/Documentation/Test-Tutorial.pdf
+src/Documentation/conf.py.orig
