Fix 'About' screen when using mysql. Change width of 'About' to fixed

--- a/src/Documentation/Makefile
+++ b/src/Documentation/Makefile
@@ -20,7 +20,7 @@ PHPMailer-master/src/SMTP.php \
 PHPMailer-master/src/Exception.php  
 
 LANDING = landing.html screenshots.html contact.php contact.html Images $(PHPMailer) \
-    download.html robots.txt sitemap.txt
+    download.html robots.txt sitemap.txt search.php search.html
 
 # READMES = ../../ReadMe-Tar.md ../../ReadMe-GitHub.md ../../ReadMe-PyPi.md ../ReadMe-Nuitka.md ../ReadMe-PyInstaller.md
 READMES = ../../ReadMe-Tar.md ../../ReadMe-GitHub.md 
